# eodh-workflows

./: .dockerignore  .env-sample  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  Makefile  README.md  conda-lock-dev.yml  conda-lock.yml  env-dev.yaml  env.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci-pipeline.yaml  docs-pipeline.yaml  pr-pipeline.yaml  publish-pipeline.yaml  zizmor-sec-check.yaml
.run/: cdom.run.xml  chl-a.run.xml  clip-s2.run.xml  clip.run.xml  cya.run.xml  doc.run.xml  ds-query-corine.run.xml  ds-query-esa-glc.run.xml  ds-query-s2-l2a-ard.run.xml  ds-query-s2-l2a.run.xml  eopro-water-quality.run.xml  evi.run.xml  lulc-change-corine.run.xml  lulc-change-global.run.xml  lulc-change-water-bodies.run.xml  ndvi.run.xml  ndwi.run.xml  raster-calc-cdom-s2.run.xml  raster-calc-chl-a-s2.run.xml  raster-calc-cya-ard.run.xml  raster-calc-cya-s2.run.xml  raster-calc-doc-s2.run.xml  raster-calc-evi-s2.run.xml  raster-calc-ndvi-ard.run.xml  raster-calc-ndvi-s2.run.xml  raster-calc-ndwi-s2.run.xml  raster-calc-savi-s2.run.xml  raster-calc-turb-s2.run.xml  raster-calc-water-colour-s2.run.xml  raster-clip-s2.run.xml  reproject-glc.run.xml  reproject-ndvi.run.xml  savi.run.xml  spectral-index-doc-s2ard.run.xml  spectral-index-doc.run.xml  spectral-index-ndvi-s2ard.run.xml  spectral-index-ndvi.run.xml  stac-join.run.xml  summarize-classes-glc.run.xml  thumbnail-s2-ndvi.run.xml  (+6 more)
api_ref/consts/: index.html
api_ref/core/configs/: index.html
api_ref/core/settings/: index.html
api_ref/utils/: index.html
cwl_files/: lulc-change-app.cwl  raster-calculate-app.cwl  scatter-inputs.json  scatter-lulc-change-app.cwl  scatter-lulc-change-inputs.json  scatter-raster-calculate-app.cwl  scatter-raster-calculate-cya-inputs.json  scatter-raster-calculate-ndvi-inputs.json  scatter-water-quality-app.cwl  scatter-water-quality-inputs.json  scatter-water-quality.cwl  water-quality-app.cwl
cwl_files/inputs/land-cover-change/: corine.json  globallc.json  scatter-corine-big.json  scatter-corine.json  water-bodies.json
cwl_files/inputs/raster-calculate/: cya.json  doc-ard.json  ndvi-ard.json  ndvi-s2.json  scatter-cya.json  scatter-ndvi.json
cwl_files/inputs/water-quality/: ard.json  s2.json  scatter-ard.json
cwl_files/samples/: clip.cwl  download.cwl  generate-thumbnail.cwl  lul-change.cwl
docs/: index.md
docs/api_ref/: consts.md  utils.md
docs/api_ref/core/: configs.md  settings.md
docs/guides/: setup-dev-env.md
guides/contributing/: index.html
guides/makefile-usage/: index.html
guides/setup-dev-env/: index.html
guides/tests/: index.html
notebooks/: UKRIW-174_interact_with_ADES.ipynb
search/: search_index.json
src/consts/: __init__.py  compute.py  crs.py  directories.py  sentinel_hub.py  stac.py
src/core/: settings.py
src/core/configs/: __init__.py  argument_parsing.py
src/data_helpers/: __init__.py  get_classes_dicts.py  sh_auth.py  sh_get_data.py
src/eodh_workflows/consts/: __init__.py  directories.py  sentinel_hub.py  stac.py
src/eodh_workflows/core/: settings.py
src/eodh_workflows/core/configs/: __init__.py  argument_parsing.py
src/eodh_workflows/utils/: geom.py  logging.py  raster.py  sentinel_hub.py  stac.py
src/eodh_workflows/workflows/: entrypoint.py  eopro_entrypoint.py
src/eodh_workflows/workflows/classification/: summarize.py
src/eodh_workflows/workflows/ds/: query.py  utils.py
src/eodh_workflows/workflows/legacy/lulc/: generate_change.py  helpers.py
src/eodh_workflows/workflows/legacy/raster/: calculator.py  clip.py
src/eodh_workflows/workflows/legacy/water/: quality.py
src/eodh_workflows/workflows/raster/: clip.py  reproject.py  thumbnail.py
src/eodh_workflows/workflows/spectral/: functional.py  index.py  indices.py  utils.py
src/eodh_workflows/workflows/stac/: join.py
src/eodh_workflows/workflows/vector/: chip.py
src/eodh_workflows/workflows/water/: quality.py
src/geom_utils/: __init__.py  calculate.py  transform.py
src/local_stac/: __init__.py  generate.py  stac_io.py
src/raster_utils/: __init__.py  build.py  helpers.py  save.py  thumbnail.py
src/utils/: logging.py  raster.py  sentinel_hub.py  stac.py
src/workflows/: entrypoint.py  eopro_entrypoint.py
src/workflows/classification/: summarize.py
src/workflows/ds/: query.py  utils.py  utils_sentinelhub.py
src/workflows/legacy/lulc/: generate_change.py  helpers.py
src/workflows/legacy/raster/: calculator.py  clip.py
src/workflows/legacy/water/: quality.py
src/workflows/lulc/: generate_change.py  generate_change_v2.py
src/workflows/raster/: calculator.py  clip.py  clip_v2.py  download.py  generate_stac.py  generate_thumbnail.py  indices.py  reproject.py  thumbnail.py
src/workflows/spectral/: functional.py  index.py  indices.py  utils.py
src/workflows/stac/: clip.py  join.py
src/workflows/vector/: chip.py
src/workflows/water/: quality.py  quality_v2.py
tests/: conftest.py
tests/data/: test-raster.tif
tests/unit/core/: test_settings.py
tests/unit/core/configs/: test_argument_parsing.py  test_config_base.py
tests/unit/geom_utils/: test_calculate.py  test_transform.py
tests/unit/local_stac/: test_generate.py
tests/unit/raster_utils/: test_build.py  test_helpers.py  test_save.py  test_thumbnail.py
tests/unit/utils/: test_gpu.py  test_logging.py  test_mlflow.py  test_serialization.py
tests/unit/workflows/raster_ops/: test_clip.py
tests/unit/workflows/stac/: test_join.py
